[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-api-mixins"
version = "0.1.1"
description = "Django REST Framework mixins for ViewSets and APIViews - APIMixin, ModelMixin, RelationshipFilterMixin, RoleBasedFilterMixin. Simplify Django API development with reusable mixins."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Subhransu Das", email = "subhransud525@gmail.com"},
]
keywords = [
    "django",
    "django-rest-framework",
    "drf",
    "django-api",
    "mixins",
    "api",
    "viewsets",
    "apiview",
    "rest-api",
    "django-mixins",
    "django-api-mixins",
    "serializer",
    "queryset",
    "filtering",
    "role-based",
    "django-filters",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "Django>=3.2",
    "djangorestframework>=3.12",
]

[project.urls]
Homepage = "https://github.com/subhrans/django-api-mixins"
Documentation = "https://github.com/subhrans/django-api-mixins#readme"
Repository = "https://github.com/Subhrans/django-api-mixins"
Issues = "https://github.com/subhrans/django-api-mixins/issues"

[tool.setuptools]
packages = ["django_api_mixins"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md"]
